@@ -32,20 +32,15 @@
       its built-in fonts, but that would require a special
       text-to-PT-PC driver.&lt;p&gt;
 
-      Consumables/Refills: Black on White Thermal Paper
-	Fabric Tape Blue on White
-	Flexi Tape
-	Iron on Black Tape
-	Security Tape Black on White
-	Strong Adhesive Tape
-	TZ tape widths w: 1=6mm, 2=9mm, 3=12mm, 4=18mm, 5=24mm
-	TZ foreground colours f: 1=black, 2=red, 3=blue, 4=gold, 5=white,
-	TZ background colours b: 1=clear, 2=white, 3=black, 4=red, 5=blue, 6=yellow, 7=green, 8=gold Part numbers: ALK251, 	
-      TZFAw, 
-      TZFXbwf, 
-      TZIYwf, 
-      TZSEw, 
-      TZSbwf&lt;p&gt;
+      Consumables/Refills: Black on White Thermal Paper,
+	Fabric Tape Blue on White,
+	Flexi Tape,
+	Iron on Black Tape,
+	Security Tape Black on White,
+	Strong Adhesive Tape,
+	TX tape widths w: 1=6mm, 2=9mm, 3=12mm, 4=18mm, 5=24mm;
+	TX foreground colours f: 1=black, 2=red, 3=blue, 4=gold, 5=white;
+	TX background colours b: 1=clear, 2=white, 3=black, 4=red, 5=blue, 6=yellow, 7=green, 8=gold&lt;p&gt;
     </en>
   </comments>
 </printer>
